alteracoes no light/dark mode e bug no querySelectorAll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,18 +61,18 @@ body{
 }
 .head{
     grid-area: head;
-    background-color: rgba(214, 219, 223, 0.5);
+/*     background-color: rgba(214, 219, 223, 0.5); */
     height: 13vh;
     display: flex;
     align-items: flex-end;
 }
 header h1{
-    color: #c1c1c1;
+/*     color: #c1c1c1; */
     padding-left: 80px;
 }
 .nav{
     grid-area: nav;
-    background-color: /* #5D80B8 */#1e2140;
+    /* background-color: #1e2140; */
     height: 100%;
     width: auto;
     min-width: 250px;
@@ -83,7 +83,7 @@ header h1{
     align-items: center;
     margin-top: 20px;
     margin-bottom: 30px;
-    color: #c1c1c1;
+/*     color: #c1c1c1; */
 }
 #nav-head h3{
     margin-bottom: 20px;
@@ -114,12 +114,12 @@ nav p{
     margin-top: 3px;
 }
 nav a :hover{
-    background-color: rgba(162, 163, 255, 0.753);
+    background-color: rgba(162, 163, 255, 0.281);
     transition: 0.1s;
 }
 nav::-webkit-scrollbar{
     width: 7px;
-    background-color: #c1c1c117;
+    background-color: #e7e7e717;
     border-radius: 4px;
 }
 nav::-webkit-scrollbar-thumb{
@@ -129,14 +129,17 @@ nav::-webkit-scrollbar-thumb{
 .button-1{
     display: flex;
     justify-content: space-between;
-    background-color: rgba(36, 38, 53, 0.062);
+    /* background-color: rgba(36, 38, 53, 0.062); */
 }
 .nav ul, li, a{
     padding: 0;
     margin: 0;
     list-style-type: none;
     text-decoration: none;
-    color: #c1c1c1;
+    /* color: #383838; */
+}
+.text-color{
+    color: #383838;
 }
 aside div{
     padding-left: 10px;
@@ -154,7 +157,7 @@ main{
 }
 footer{
     grid-area: foot;
-    background-color: #1e2140;
+    /* background-color: #1e2140; */
     line-height: center;
     display: block;
 }
@@ -162,7 +165,6 @@ footer p{
     margin-left: 80vw;
     padding-top: 50px;
     padding-bottom: 50px;
-    color: #c1c1c1;
 }
 .head-content{
     min-height: 400px;
@@ -170,7 +172,7 @@ footer p{
     background-color: #f2f6fd44;
     box-shadow: 0px 0px 20px #999;
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 20px;
     grid-column: 1/3;
 }
@@ -180,7 +182,7 @@ footer p{
     background-color: #f2f6fd44;
     box-shadow: 0px 0px 20px #999;
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 #graph-1{
     height: 400px;
